# loga-sms-core-middleware-python-sdk

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  release.yml
examples/fastapi-app/: main.py  requirements.txt  run.sh
loga_sms_sdk/: __init__.py
loga_sms_sdk/models/: __init__.py
