[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "loga-sms-sdk"
dynamic = ["version"]
authors = [
  { name="Loga Engineering", email="support@loga-engineering.com" },
]
description = "Official Python SDK for Loga SMS Core Middleware API"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
]

[project.urls]
"Homepage" = "https://github.com/loga-apps/loga-sms-sdk-python"
"Bug Tracker" = "https://github.com/loga-apps/loga-sms-sdk-python/issues"
